# cot_proxy

./: .aider.conf.yml  .env.example  .gitignore  .woodpecker.yaml  Containerfile  README.md  cot_proxy.py  docker-compose.yml  historical-old-instructions.md  pyproject.toml
examples/: cot_proxy.yaml
examples/devstral-2/: .gitattributes  CHAT_SYSTEM_PROMPT.txt
examples/mistral/: CHAT_SYSTEM_PROMPT.txt  VIBE_SYSTEM_PROMPT.txt  prompts.url
tests/: test_llm_params.py  test_proxy_non_streaming.py  test_proxy_streaming.py  test_system_prompt.py
