[project]
name = "cot_proxy"
version = "0.1.0"
description = "Intercepting LLM-proxy based on annotated model names."
authors = ["Benjamin Oldenburg <email@example.com>"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Flask", "requests", "gunicorn", "responses"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-flask",
    "pytest-mock",
]
