[project]
name = "cot_proxy"
version = "0.1.0"
description = "Intercepting LLM-proxy based on annotated model names."
authors = ["Benjamin Oldenburg <email@example.com>"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Flask", "requests", "gunicorn", "responses"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.1",
]
